@@ -4,9 +4,11 @@ from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
 from izug.basetheme.utils import get_version_and_config
 from pkg_resources import iter_entry_points
 from plone.app.layout.viewlets import common, content
+from plone.app.layout.navigation.interfaces import INavigationRoot
 from plone.memoize import ram
 from plone.memoize.instance import memoize
 from zope.component import getMultiAdapter
+from random import randrange
 
 
 class PathBar(common.PathBarViewlet):
@@ -75,3 +77,33 @@ class DebugInfo(common.TitleViewlet):
             return ', '.join(data)
         else:
             return ''
+
+
+class Banner(common.ViewletBase):
+    render = ViewPageTemplateFile('viewlets_templates/banner.pt')
+
+    @property
+    def available(self):
+        context = aq_inner(self.context).aq_explicit
+        if INavigationRoot.providedBy(context) and getattr(context, 'bannerbilder', None):
+            return True
+        return False
+        
+    def update(self):
+        if not self.available:
+            return 
+        context = aq_inner(self.context)
+        self.img_path = '%s/default_banner.jpg' % context.portal_url()
+        self.img_title = context.Title
+        #check for folder 'bannerbilder'
+        bannerfolder = getattr(context.aq_explicit,'bannerbilder',False)
+        if bannerfolder:
+            all_imgs = context.portal_catalog({'portal_type':['Banner',],
+                                               'path':'/'.join(bannerfolder.getPhysicalPath()),
+                                               'review_state':['published_internet','published']})
+                                               
+            counted = len(all_imgs)
+            if counted:
+                randomized = randrange(1,int(counted)+1,1)
+                self.img_path = all_imgs[randomized-1].getURL()
+                self.img_title = all_imgs[randomized-1].Title
