@@ -64,6 +64,7 @@ input[type=checkbox] {
 
 #portal-searchbox #searchGadget {
   margin-right:0.4545em;
+  margin-bottom: 0;
   padding:0.1818em 0.4545em 0.3636em;
   width:16.8182em;
   font-family: "Lucida Grande",Verdana,Arial,Helvetica,sans-serif;
@@ -71,6 +72,7 @@ input[type=checkbox] {
 }
 #portal-searchbox input.searchButton {
   font-size: 1.1em;
+  margin-bottom: 0;
 }
 button,
 input[type=button],
