@@ -4,6 +4,11 @@ Changelog
 
 1.0a9
 -----
+* Added banner image functionality like in zug.ch. Banner is hidden per default
+  unless a folder 'bannerbilder' exists in the current location which has to 
+  be an INavigationRoot
+  [fsprenger]
+
 * Compatibility with plone 3; added a new import step for plone 3 sites, a new 
   skin layer for plone 3 and a customized stylessheet for compatibility
   [fsprenger]
